[gd_scene load_steps=12 format=3 uid="uid://kpqwebu0bb67"]

[ext_resource type="Theme" uid="uid://dyhdr7sojcl5h" path="res://assets/windows_xp_theme.tres" id="1_g5w0b"]
[ext_resource type="Script" uid="uid://bl8ocafyv1w1b" path="res://components/popups/gig_popup.gd" id="2_3vama"]
[ext_resource type="Texture2D" uid="uid://ulcids0e12dp" path="res://assets/prof_pics/worker.png" id="3_lo5h5"]
[ext_resource type="Texture2D" uid="uid://cpph6qmmgf2p3" path="res://assets/ui/buttons/greenbuttonpressed.png" id="4_rap7d"]
[ext_resource type="Texture2D" uid="uid://bu12v0yfad1ai" path="res://assets/ui/buttons/lilac_normal.png" id="5_bhen3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rn3q4"]
bg_color = Color(0.0923971, 0.0923971, 0.092397, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6786e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d50uj"]
bg_color = Color(0.968351, 0.357676, 0.466506, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lo5h5"]
texture = ExtResource("4_rap7d")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rap7d"]
texture = ExtResource("4_rap7d")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bhen3"]
texture = ExtResource("5_bhen3")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="GigPopup" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_g5w0b")
theme_override_styles/panel = SubResource("StyleBoxFlat_rn3q4")
script = ExtResource("2_3vama")
window_title = "Gig"
default_window_size = Vector2(300, 420)
unique_popup_key = "task_ + "

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Title"
autowrap_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6786e")
theme_override_styles/fill = SubResource("StyleBoxFlat_d50uj")

[node name="ProductivityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " / "

[node name="PayoutLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Payout"
autowrap_mode = 3

[node name="LimitLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Limit"

[node name="CompletionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "completions"

[node name="SelectedWorkerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "completions"

[node name="WorkForceButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "WorkForce"
icon = ExtResource("3_lo5h5")

[node name="AssignButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_filter = 1
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_lo5h5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rap7d")
theme_override_styles/normal = SubResource("StyleBoxTexture_bhen3")
text = "Assign Worker"

[node name="AssignedWorkersLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Assigned Workers:"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WorkerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GrindButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Grind"

[connection signal="pressed" from="MarginContainer/VBoxContainer/WorkForceButton" to="." method="_on_work_force_button_pressed"]
